+ workstations: context menu 	+ remove

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
 			<input type="text" name="newworkstation" placeholder="Add workstation" id="newWorkstationInput" />
 		</div>
+
+		<div id="workstationContextMenu" tabindex="0" hidden><button id="deleteWorkstation">Delete</button></div>
 	</div>
 
 	<div class="boards">
