+ workstations: context menu 	+ remove * delete button context menu not disappearing fix

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 			<li id="allBoardsButton">(All)</li>
 		</ul>
 
+		<div id="boardContextMenu" tabindex="-1" hidden><button id="deleteBoard">Delete</button></div>
+
 		<input type="text" name="newboard" placeholder="Add board" id="newBoardInput" />
 	</div>
 
