--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 		<div id="workstationSelectionDiv" hidden>
 			<ul id="workstationsUl">
-				<li id="allWorkstationsButton">(Any workstation)</li>
+				<li id="allWorkstationsButton">(Workstation)</li>
 			</ul>
 
 			<input type="text" name="newworkstation" placeholder="Add workstation" id="newWorkstationInput" />
