+ tasks: context menu 	+ remove

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 				<label><input type="radio" name="workstation" value="1" id="curWorkstationRadio" /><span></span></label>
 			</div>
 		</div>
+
+		<div id="taskContextMenu" tabindex="-1" hidden><button id="deleteTask">Delete</button></div>
 	</div>
 </div>
 
