* task: workstation is ID instead of name * current workstation is saved by ID (instead of name) * current board is saved by ID (instead of name) + style: delete button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<input type="text" name="newworkstation" placeholder="Add workstation" id="newWorkstationInput" />
 		</div>
 
-		<div id="workstationContextMenu" tabindex="-1" hidden><button id="deleteWorkstation">Delete</button></div>
+		<div id="workstationContextMenu" tabindex="-1" hidden><button id="deleteWorkstation" class="delete">Delete</button></div>
 	</div>
 
 	<div class="boards">
@@ -47,7 +47,7 @@
 			<li id="allBoardsButton">(All)</li>
 		</ul>
 
-		<div id="boardContextMenu" tabindex="-1" hidden><button id="deleteBoard">Delete</button></div>
+		<div id="boardContextMenu" tabindex="-1" hidden><button id="deleteBoard" class="delete">Delete</button></div>
 
 		<input type="text" name="newboard" placeholder="Add board" id="newBoardInput" />
 	</div>
@@ -66,7 +66,7 @@
 			<hr />
 			<h4>Workstation</h4>
 			<hr />
-			<button id="deleteTask">Delete</button>
+			<button id="deleteTask" class="delete">Delete</button>
 		</div>
 	</div>
 </div>
