+ style: loader, log in

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<div id="firebaseui-auth-container"></div>
+<div id="firebaseui-auth-container" hidden></div>
 <div id="loaderDiv">Loading…</div>
 
 <div id="mainDiv" hidden>
