--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		</div>
 
 		<div id="taskContextMenu" tabindex="-1" hidden>
+			<button id="repeatTask">Repeat now</button><hr />
 			<h4>Status</h4>
 			<hr />
 			<h4>Workstation</h4>
