* fixed selection on task status change

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
 			<hr />
 			<button id="deleteTask" class="delete">Delete</button>
 		</div>
+
+		<div id="statusContextMenu" tabindex="-1" hidden>
+			<button id="editStatuses">Edit…</button>
+		</div>
 	</div>
 
 	<div id="importer" hidden>
