--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
 
 		<div id="statusEdit" hidden><div>
 			<ul id="statusUl"></ul>
-			<button id="cancelStatusEdit" class="delete">Cancel</button>
-			<button id="saveStatusEdit">Save</button>
+			<div><button id="addStatus">Add</button></div>
+			<div>
+				<button id="cancelStatusEdit" class="delete">Cancel</button>
+				<button id="saveStatusEdit" class="default">Save</button>
+			</div>
 		</div></div>
 	</div>
 
