+ custom statuses save, load

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 			<button id="repeatTask">Repeat now</button><hr />
 			<label id="focusedLabel"><input type="checkbox" /> Focused</label><hr />
 			<h4>Status</h4>
+			<div id="taskStatuses"></div>
 			<hr />
 			<h4>Workstation</h4>
 			<hr />
