--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 		<div id="taskContextMenu" tabindex="-1" hidden>
 			<button id="repeatTask">Repeat now</button><hr />
-			<label id="focusedLabel"><input type="checkbox" /> Focused</label><hr />
+			<!-- <label id="focusedLabel"><input type="checkbox" /> Focused</label><hr /> -->
 			<h4>Status</h4>
 			<div id="taskStatuses"></div>
 			<hr />
