+ hybrid kanban display * fixed status edit dragging

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 		<div class="toolbar">
 			<div class="radios">
-				<label><input type="radio" name="display" value="0" id="listRadio" checked /><span>List</span></label><label><input type="radio" name="display" value="1" id="kanbanRadio" /><span>Kanban</span></label>
+				<label><input type="radio" name="display" value="0" id="listRadio" checked /><span>List</span></label><label><input type="radio" name="display" value="1" id="kanbanRadio" /><span>Kanban</span></label><label><input type="radio" name="display" value="2" id="hybridRadio" /><span>Hybrid</span></label>
 			</div>
 		</div>
 
